[gd_scene load_steps=17 format=2]

[ext_resource path="res://Levels/GenericLevel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Buttons/FadingLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Operators/minus.png" type="Texture" id=3]
[ext_resource path="res://Buttons/MovableButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Operators/equal.png" type="Texture" id=5]
[ext_resource path="res://Assets/Numbers/1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Symbols/Smiley.png" type="Texture" id=7]
[ext_resource path="res://Assets/square_missing.png" type="Texture" id=8]
[ext_resource path="res://Assets/Numbers/4.png" type="Texture" id=9]
[ext_resource path="res://Assets/Operators/plus.png" type="Texture" id=10]
[ext_resource path="res://Assets/Numbers/2.png" type="Texture" id=11]
[ext_resource path="res://Assets/Numbers/9.png" type="Texture" id=12]
[ext_resource path="res://Assets/Symbols/Laughy.png" type="Texture" id=13]
[ext_resource path="res://Assets/Numbers/7.png" type="Texture" id=14]
[ext_resource path="res://Assets/Numbers/0.png" type="Texture" id=15]
[ext_resource path="res://Levels/Level14/Level14.gd" type="Script" id=16]

[node name="Level14" instance=ExtResource( 1 )]
margin_left = -1.18921
margin_right = -1.18921
script = ExtResource( 16 )

[node name="TrueRect" parent="." index="0"]
margin_left = 165.524
margin_top = 100.629
margin_right = 181.524
margin_bottom = 116.629
rect_scale = Vector2( 30, 30 )

[node name="TextureRect" type="TextureRect" parent="." index="6"]
margin_left = 231.774
margin_top = 172.247
margin_right = 247.774
margin_bottom = 188.247
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="TextureRect11" type="TextureRect" parent="." index="7"]
margin_left = 232.665
margin_top = 392.299
margin_right = 248.665
margin_bottom = 408.299
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="TextureRect2" type="TextureRect" parent="." index="8"]
margin_left = 303.556
margin_top = 173.247
margin_right = 319.556
margin_bottom = 189.247
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="TextureRect7" type="TextureRect" parent="." index="9"]
margin_left = 306.919
margin_top = 284.246
margin_right = 322.919
margin_bottom = 300.246
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="TextureRect3" type="TextureRect" parent="." index="10"]
margin_left = 360.556
margin_top = 174.77
margin_right = 376.556
margin_bottom = 190.77
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="." index="11"]
margin_left = 426.146
margin_top = 173.088
margin_right = 442.146
margin_bottom = 189.088
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="TextureRect5" type="TextureRect" parent="." index="12"]
margin_left = 497.262
margin_top = 175.285
margin_right = 513.262
margin_bottom = 191.285
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 11 )

[node name="TextureRect6" type="TextureRect" parent="." index="13"]
margin_left = 233.221
margin_top = 283.761
margin_right = 249.221
margin_bottom = 299.761
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 13 )

[node name="TextureRect12" type="TextureRect" parent="." index="14"]
margin_left = 235.894
margin_top = 482.431
margin_right = 251.894
margin_bottom = 498.431
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 13 )

[node name="TextureRect13" type="TextureRect" parent="." index="15"]
margin_left = 311.779
margin_top = 389.725
margin_right = 327.779
margin_bottom = 405.725
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect15" type="TextureRect" parent="." index="16"]
margin_left = 367.906
margin_top = 392.397
margin_right = 383.906
margin_bottom = 408.397
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect16" type="TextureRect" parent="." index="17"]
margin_left = 370.081
margin_top = 485.054
margin_right = 386.081
margin_bottom = 501.054
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect14" type="TextureRect" parent="." index="18"]
margin_left = 311.726
margin_top = 479.705
margin_right = 327.726
margin_bottom = 495.705
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="TextureRect8" type="TextureRect" parent="." index="19"]
margin_left = 360.644
margin_top = 282.817
margin_right = 376.644
margin_bottom = 298.817
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="TextureRect9" type="TextureRect" parent="." index="20"]
margin_left = 497.506
margin_top = 281.873
margin_right = 513.506
margin_bottom = 297.873
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="TextureRect10" type="TextureRect" parent="." index="21"]
margin_left = 430.491
margin_top = 282.817
margin_right = 446.491
margin_bottom = 298.817
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 10 )

[node name="FadingLabel" parent="." index="22" instance=ExtResource( 2 )]
margin_left = 147.972
margin_top = 46.8424
margin_right = 875.972
margin_bottom = 71.8424
bbcode_enabled = false
bbcode_text = ""
text = "This one is pretty tough."

[node name="FadingLabel2" parent="." index="23" instance=ExtResource( 2 )]
margin_left = 255.0
margin_top = 453.0
margin_right = 486.0
margin_bottom = 478.0
bbcode_enabled = false
bbcode_text = ""
text = "You did it. Pretty Amazing"

[node name="MovableButton" parent="." index="24" instance=ExtResource( 4 )]
margin_left = 728.943
margin_top = 146.593
margin_right = 744.943
margin_bottom = 162.593
texture_normal = ExtResource( 15 )
text = ExtResource( 15 )

[node name="MovableButton2" parent="." index="25" instance=ExtResource( 4 )]
margin_left = 910.306
margin_top = 165.817
margin_right = 926.306
margin_bottom = 181.817
text = ExtResource( 6 )

[node name="MovableButton3" parent="." index="26" instance=ExtResource( 4 )]
margin_left = 717.616
margin_top = 271.184
margin_right = 733.616
margin_bottom = 287.184
texture_normal = ExtResource( 11 )
text = ExtResource( 11 )

[node name="MovableButton4" parent="." index="27" instance=ExtResource( 4 )]
margin_left = 835.865
margin_top = 306.806
margin_right = 851.865
margin_bottom = 322.806
texture_normal = ExtResource( 9 )
text = ExtResource( 9 )

[node name="MovableButton5" parent="." index="28" instance=ExtResource( 4 )]
margin_left = 703.458
margin_top = 396.719
margin_right = 719.458
margin_bottom = 412.719
texture_normal = ExtResource( 12 )
text = ExtResource( 12 )

[node name="MovableButton6" parent="." index="29" instance=ExtResource( 4 )]
margin_left = 903.087
margin_top = 421.077
margin_right = 919.087
margin_bottom = 437.077
texture_normal = ExtResource( 14 )
text = ExtResource( 14 )
